fix: deprecated Class.newInstance()